--- a/History_API_Navigation/spa-navigation.html
+++ b/History_API_Navigation/spa-navigation.html
@@ -1,16 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History API Navigation</title>
-
-    <!-- CSS -->
+    <title>Single Page Navigation</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <!-- Navigation Menu -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <h1 class="nav-logo">MyWebsite</h1>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-page="home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-page="about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-page="services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-page="contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main Content Container -->
+    <main class="main-content">
+        <!-- Home Page -->
+        <div id="home" class="page active">
+            <div class="container">
+                <h1>Chào mừng đến với trang chủ!</h1>
+                <p>Đây là nội dung của trang Home.</p>
+                <div class="hero-section">
+                    <h2>Welcome to Our Website</h2>
+                    <p>Khám phá các dịch vụ tuyệt vời của chúng tôi</p>
+                    <button class="cta-button">Tìm hiểu thêm</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- About Page -->
+        <div id="about" class="page">
+            <div class="container">
+                <h1>Thông tin về chúng tôi</h1>
+                <p>Chúng tôi là công ty chuyên về công nghệ web.</p>
+                <div class="about-content">
+                    <div class="about-text">
+                        <h2>Câu chuyện của chúng tôi</h2>
+                        <p>Được thành lập từ năm 2020, chúng tôi đã không ngừng phát triển và mang đến những giải pháp
+                            công nghệ tốt nhất cho khách hàng.</p>
+                    </div>
+                    <div class="about-stats">
+                        <div class="stat">
+                            <h3>100+</h3>
+                            <p>Dự án hoàn thành</p>
+                        </div>
+                        <div class="stat">
+                            <h3>50+</h3>
+                            <p>Khách hàng hài lòng</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Services Page -->
+        <div id="services" class="page">
+            <div class="container">
+                <h1>Các dịch vụ của chúng tôi</h1>
+                <p>Thiết kế web, Lập trình ứng dụng, Tư vấn công nghệ.</p>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h3>Thiết kế Web</h3>
+                        <p>Tạo ra những trang web đẹp mắt và thân thiện với người dùng</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Lập trình ứng dụng</h3>
+                        <p>Phát triển ứng dụng web và mobile theo yêu cầu</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Tư vấn công nghệ</h3>
+                        <p>Đưa ra lời khuyên chuyên nghiệp về giải pháp công nghệ</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Contact Page -->
+        <div id="contact" class="page">
+            <div class="container">
+                <h1>Liên hệ với chúng tôi</h1>
+                <p>Email: contact@example.com, Phone: 0123456789</p>
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <h3>Thông tin liên hệ</h3>
+                        <div class="contact-item">
+                            <strong>Email:</strong> contact@example.com
+                        </div>
+                        <div class="contact-item">
+                            <strong>Điện thoại:</strong> 0123456789
+                        </div>
+                        <div class="contact-item">
+                            <strong>Địa chỉ:</strong> 123 Đường ABC, Quận XYZ, TP. Hồ Chí Minh
+                        </div>
+                    </div>
+                    <div class="contact-form">
+                        <h3>Gửi tin nhắn</h3>
+                        <form>
+                            <input type="text" placeholder="Họ tên" required>
+                            <input type="email" placeholder="Email" required>
+                            <textarea placeholder="Tin nhắn" rows="5" required></textarea>
+                            <button type="submit">Gửi tin nhắn</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- History Info Display -->
+    <div class="history-info">
+        <span>History Length: <span id="history-length">1</span></span>
+    </div>
 
     <script src="./main.js"></script>
 </body>
