--- a/History_API_Navigation/spa-navigation.html
+++ b/History_API_Navigation/spa-navigation.html
@@ -15,7 +15,7 @@
             <h1 class="nav-logo">MyWebsite</h1>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-page="home">Home</a>
+                    <a href="#" class="nav-link active" data-page="home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link" data-page="about">About</a>
